# rootcode-datathon

./: README.md  app.py  pyproject.toml
data/: Place_Reviews_Evaluation.csv  Places Dataset Classified Reviews Cleaned Combined .csv  Places Dataset Classified Reviews Cleaned Combined.csv  Places Dataset Classified Reviews.csv  Places Dataset Enriched Filled.csv  Places Dataset Enriched.csv  readme.md
experiments/: TFIDF model.ipynb  readme.md  river_model.ipynb
models/: CodeRecon_FinalNotebook.ipynb  TFIDF model.ipynb  tfidf_matrix.pkl  tfidf_vectorizer.pkl
notebooks/: Data_Enrich_OpenAI.ipynb  EDA.ipynb  EDA_Reviews.ipynb  readme.md
pipe/: Input_Pipeline_Recommendation_Model.ipynb  Output_Pipeline_Recommendation_Model.ipynb  readme.md  recommendation_system_data_preprocess.ipynb
pipe/model_data/: feature_df.parquet  sentence_embeddings.npy  svd_model.joblib  tfidf_matrix.joblib  tfidf_vectorizer.joblib  word2vec_model
reports/: readme.md
utils/: readme.md
