[project]
name = "rootcode-datathon"
version = "0.1.0"
description = "Rootcode Datathon - 2024 - CodeRecon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "functions>=0.7.0",
    "gensim>=4.3.3",
    "geopy>=2.4.1",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "keybert>=0.8.5",
    "langchain>=0.2.16",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "openai>=1.44.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pydantic>=2.9.1",
    "river>=0.21.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.1.0",
    "spacy>=3.8.0",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
    "transformers>=4.44.2",
    "unidecode>=1.3.8",
    "vadersentiment>=3.3.2",
]
